--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "form-data": "^4.0.3",
     "gifencoder": "^2.0.1",
     "node-fetch": "^2.7.0",
+    "puppeteer": "^24.11.2",
     "sharp": "^0.34.2",
     "ws": "^8.18.2",
+    "youtube-dl-exec": "^3.0.22",
     "yt-search": "^2.13.1"
   }
 }
